[package]
name = "pipeviewer"
version = "0.1.1"
authors = ["gobrewers14 <john.r.martinez14@gmail.com>"]
edition = "2018"
description = "educational version of the pipeviewer utility"
homepage = "https://github.com/gobrewers14/pipeviewer"
repository = "https://github.com/gobrewers14/pipeviewer"
readme = "README.md"
keywords = ["educational"]
categories = ["command-line-utilities"]
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
crossbeam = "0.7.3"
crossterm = "0.14.2"